# esp-string-parser

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PARTIAL_TRANSLATION_GUIDE.md  README.md  Refactor.md  STRING_FILE_USAGE.md  esp_string_extractor_rust_spec.txt  research_summary.txt  test_extract.json  test_partial_translation.json  test_verify.rs
.serena/: project.yml
data/: string_records.json
docs/: plugin-loading-guide.md
examples/: basic_usage.rs  check_ammo.rs  check_bsa_strings.rs  performance_comparison.rs  test_bsa.rs
src/: bsa.rs  datatypes.rs  debug.rs  editor.rs  group.rs  io.rs  lib.rs  localized_context.rs  main.rs  plugin.rs  plugin_loader.rs  record.rs  special_records.rs  string_file.rs  string_routes.rs  string_types.rs  subrecord.rs  utils.rs
src/bsa/: mod.rs  strings_provider.rs
src/editor/: delta.rs  mod.rs  plugin_editor.rs
src/io/: esp_io.rs  mod.rs  string_file_io.rs  traits.rs
src/plugin/: esl.rs  mod.rs  parser.rs  stats.rs  strings.rs  translate.rs  writer.rs
src/string_file/: bsa.rs  file.rs  io.rs  mod.rs  set.rs  tests.rs
src/string_routes/: data.rs  mod.rs  router.rs
tests/: bsa_fallback_test.rs  debug_bsa_content.rs  debug_load_from_bsa.rs  skyrim_integration_test.rs
